Tag client request metrics with specific client versions